--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,3 +6,62 @@ spring.mail.default-encoding=UTF-8
 spring.mail.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.debug=true
+
+
+spring.redis.database=1
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.pool.max-active=1000
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=10
+spring.redis.pool.min-idle=1
+spring.redis.timeout=500
+
+
+#热部署生效
+spring.devtools.restart.enabled=true
+#设置重启目录
+spring.devtools.restart.additional-paths=src/main/java
+@为mybatis设置，生产环境可以删除
+restart.include.mapper=/mapper-[\\w-\\.]+jar
+restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
+#派出不需要重新启动的文件
+#spring.devtools.restart.exclude=static/**,public/**
+#classpath\u76ee\u5f55\u4e0b\u7684WEB-INF\u6587\u4ef6\u5939\u5185\u5bb9\u4fee\u6539\u4e0d\u91cd\u542f
+#spring.devtools.restart.exclude=WEB-INF/**
+
+
+############################################################
+#
+# 阿里巴巴Druid
+#
+############################################################
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=ossdb123
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.initial-size=1
+spring.datasource.druid.min-idle=1
+spring.datasource.druid.max-active=20
+spring.datasource.druid.test-on-borrow=true
+spring.datasource.druid.stat-view-servlet.allow=true
+
+
+############################################################
+#
+# mybatis config
+#
+############################################################
+# mybatis class path
+mybatis.type-aliases-package=com.example.demo.pojo
+mybatis.mapper-locations=classpath:mapper/*.xml
+# Mapper config
+mapper.mappers=com.example.demo.unit.MyMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+# 分页插件配置
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
