--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8889
+server.port=9000
 spring.mail.host=smtp.qq.com
 spring.mail.username=804612791@qq.com
 spring.mail.password=znaewakxllixbcfb
@@ -65,3 +65,11 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+
+
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=utf-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
