--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -89,7 +89,32 @@
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
+		<!-- 引入log4j日志依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j</artifactId>
+			<version>1.3.8.RELEASE</version>
+		</dependency>
 
+		<!--a client of idworker to generate global unique id-->
+
+		<dependency>
+			<groupId>com.github.bingoohuang</groupId>
+			<artifactId>idworker-client</artifactId>
+			<version>0.0.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+
+		<!-- 引入 thymeleaf 模板依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
